log
Thu 11 May 2023 07:51:52 PM UTC: 
 tests:  0|4
total_score: 0/70
0c01df2
Thu 11 May 2023 07:53:45 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:23: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   37 |   Heap * nuevoHeap = (heap *) malloc(sizeof(Heap));
      |                       ^~~~
      |                       Heap
heap.c:37:23: note: each undeclared identifier is reported only once for each function it appears in
heap.c:37:29: error: expected expression before ‘)’ token
   37 |   Heap * nuevoHeap = (heap *) malloc(sizeof(Heap));
      |                             ^
heap.c:37:10: error: unused variable ‘nuevoHeap’ [-Werror=unused-variable]
   37 |   Heap * nuevoHeap = (heap *) malloc(sizeof(Heap));
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0bcff76
Thu 11 May 2023 07:53:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:10: error: unused variable ‘nuevoHeap’ [-Werror=unused-variable]
   37 |   Heap * nuevoHeap = (Heap *) malloc(sizeof(Heap));
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c02f876
Thu 11 May 2023 07:54:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
0332852
Thu 11 May 2023 07:56:03 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
b4d195c
Thu 11 May 2023 07:56:40 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
a2bdbd1
Thu 11 May 2023 07:57:02 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
c11c338
Thu 11 May 2023 07:57:22 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
d2ade70
Thu 11 May 2023 07:57:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
fa7d6b0
Thu 11 May 2023 08:47:19 PM UTC: 
 heap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
d49a081
Thu 11 May 2023 08:48:14 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:30:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   30 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:31:1: error: control reaches end of non-void function [-Werror=return-type]
   31 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
678b791
Thu 11 May 2023 08:48:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
14da172
Thu 11 May 2023 08:48:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:30:27: error: ‘heapElem’ {aka ‘struct nodo’} has no member named ‘datas’; did you mean ‘data’?
   30 |   return pq->heapArray[0].datas;
      |                           ^~~~~
      |                           data
heap.c:31:1: error: control reaches end of non-void function [-Werror=return-type]
   31 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d25a128
Thu 11 May 2023 08:48:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
bdfa844
Thu 11 May 2023 11:50:03 PM UTC: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:38:9: error: unused variable ‘nuevaCapac’ [-Werror=unused-variable]
   38 |     int nuevaCapac = (pq->capac * 2) + 1;
      |         ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4b56075
Thu 11 May 2023 11:51:55 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:85: error: expected ‘)’ before ‘;’ token
   39 |     pq->heapArray = (heapElem *) realloc(pq->heapArray, nuevaCapac* sizeof(heapElem);
      |                                         ~                                           ^
      |                                                                                     )
heap.c:39:86: error: expected ‘;’ before ‘}’ token
   39 |     pq->heapArray = (heapElem *) realloc(pq->heapArray, nuevaCapac* sizeof(heapElem);
      |                                                                                      ^
      |                                                                                      ;
   40 |   }
      |   ~                                                                                   
Compilation failed
ca16461
Thu 11 May 2023 11:53:36 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:84: error: expected ‘)’ before ‘;’ token
   39 |     pq->heapArray = (heapElem *) realloc(pq->heapArray, nuevaCapac*sizeof(heapElem);
      |                                         ~                                          ^
      |                                                                                    )
heap.c:40:28: error: expected ‘;’ before ‘}’ token
   40 |     pq->capac = nuevaCapac;
      |                            ^
      |                            ;
   41 |   }
      |   ~                         
Compilation failed
1d2394f
Thu 11 May 2023 11:53:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
87d2cbc
Thu 11 May 2023 11:54:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
8703565
Fri 12 May 2023 12:37:30 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3b25bd5
Fri 12 May 2023 12:40:49 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:14: error: variable ‘new’ set but not used [-Werror=unused-but-set-variable]
   42 |     heapElem new;
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
54d0445
Fri 12 May 2023 12:42:10 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
4f459a0
Fri 12 May 2023 12:53:38 AM UTC: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:66: error: array subscript is not an integer
   52 |     while(pos > 0 && (pq->heapArray[pos].priority > pq->heapArray[new].priority))
      |                                                                  ^
heap.c:50:9: error: unused variable ‘nuevaPos’ [-Werror=unused-variable]
   50 |     int nuevaPos = (pos - 1) / 2;
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
328a091
Fri 12 May 2023 12:53:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
c657af6
Fri 12 May 2023 12:55:37 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:54:22: error: invalid initializer
   54 |       heapElem aux = pq,heapArray;
      |                      ^~
heap.c:54:25: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   54 |       heapElem aux = pq,heapArray;
      |                         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
19c27e8
Fri 12 May 2023 12:55:51 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:54:22: error: invalid initializer
   54 |       heapElem aux = pq->heapArray;
      |                      ^~
Compilation failed
ba97630
Fri 12 May 2023 12:56:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a4e0cf1
Fri 12 May 2023 12:57:05 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
269a2ed
Fri 12 May 2023 01:00:50 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3fa195d
Fri 12 May 2023 01:04:08 AM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
1997023
Fri 12 May 2023 01:42:01 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|1
total_score: 45/70
2413765
